fix minor style issue of controls elements distibution on tablets

--- a/src/content/elements/SellModal/index.scss
+++ b/src/content/elements/SellModal/index.scss
@@ -16,7 +16,7 @@
   align-items: center;
   order: 4;
 
-  @media (min-width: 560px) {
+  @media (min-width: 769px) {
     flex-direction: row;
     padding: 10px;
   }
